# wi-bail

./: .gitignore  EXAMPLES.md  LICENSE.md  README.md  backup_cases.sh  pyproject.toml
notebooks/: Dane County Visualizations.ipynb  Geocoding.ipynb
src/bail/: Bail Visualizations.ipynb  baildriver.py  console.py  counties.py  danecountyinmatesdriver.py  db.py  geocode.py
src/bail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
